--- a/main.html
+++ b/main.html
@@ -10,6 +10,33 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<h3>My Playlist</h3>
+	<div class="player_one">
+		<div>
+			
+		<a href="https://www.youtube.com/watch?v=kd-6aw99DpA" target="_blank">Song1</a>
+		</div>
+		<div>
+		<a href=" https://www.youtube.com/watch?v=9iIX4PBplAY" target="_blank">Song2</a>
+		</div>
+		<div>
+			<a href="https://www.youtube.com/watch?v=IjBAgWKW12Y" target="_blank">Song3</a>
+		</div>
+		<div>
+			<a href="https://www.youtube.com/watch?v=puKD3nkB1h4" target="_blank">Song4</a>
+		</div>
+		<div>
+			<a href="https://www.youtube.com/watch?v=6MgsHSAcI9k" target="_blank">Song5</a>
+		</div>
+	</div>
+
+	<h5>Now Playing...</h5>
+	<div class="player_two">
+		<video src="https://www.w3schools.com/tags/movie.mp4" controls></video>
+		<h5>MP3 songs</h5>
+		<p>Maan Meri Jaan</p>
+		<audio src="https://www.pagalworld.com.se/files/download/id/64630" controls></audio>
+	</div>
 
 </body>
 
